Updated echo settings
Updated echo settings.

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,7 +8,7 @@ keep_md: true
 
 ## Loading and preprocessing the data
 This section loads various packages needed by the following code to analyze and process data in the 'active.csv' file. The data from this file is loaded into a data frame, and subsequently filtered as appropriate to present the data.
-```{r}
+```{r, echo = TRUE}
 library(data.table)
 library(plyr)
 library(stringr)
@@ -33,7 +33,7 @@ Next, we present a histogram of the total number of steps taken each day.
 > - With histograms, each column represents a group defined by a variable representing quantity. 
 > - Simply speaking, bar plot will have labels on X axis describing the categories, histogram will have a quantity represented numerically.
 
-```{r}
+```{r, echo = TRUE}
 # This line calculates the total number of steps taken per day for each day in the dataset.
 aggregatedActivityData <- aggregate(. ~ date, data=activityDataCompleteCases, FUN=sum)
 
@@ -46,13 +46,13 @@ medianSteps <- median(aggregatedActivityData$steps, na.rm = TRUE)
 ```
 
 The mean and median of the total number of steps taken per day:
-```{r}
+```{r, echo = TRUE}
 cat("Mean Total Number of Steps : ", meanSteps, "\n", "Median Total Number of Steps : ", medianSteps)
 ```
 
 ## What is the average daily activity pattern?
 Here, we make a time series plot of type = "l" using basic plot system. We use the 5-minute interval as X-axis and the average number of steps taken, averaged across all days as Y-axis. 
-```{r}
+```{r, echo = TRUE}
 # X axis <- 5 minute intervals for one day (0-2400)
 # Y axis <- average number of steps during that interval across all days. Use only complete cases.
 dtMeanForInterval <- aggregate(formula = steps ~ interval, data = activityDataCompleteCases, FUN = mean)
@@ -71,7 +71,7 @@ cat("5-minute interval [", dtMaxSteps$final, "] contains the maximum number of s
 
 ## Imputing missing values
 When creating the histogram in Question 1, we used the dataset after removing the missing values i.e. we removed NAs. The presence of missing data may introduce bias into some calculations or summaries of the data. A simple example of this would be calculating mean with NA values will always result in the outcome 'NA'.
-```{r}
+```{r, echo = TRUE}
 # Here, we count the total number of NA values in 'steps' column. The other two columns do not have any NAV values.
 missingDataCount <- sum(is.na(activityData$steps))
 # Note, if we take a count of all complete cases and subtract it from the total number of records in original dataset, we still get the same result.
@@ -80,7 +80,7 @@ cat("The total number of missing values in the dataset (i.e. the total number of
 
 Next, we devise a simple strategy to impute the data i.e. to fill in all of the missing values in the dataset. 
 The strategy is to replace the missing value with the mean for that 5-minute interval across all days.
-```{r}
+```{r, echo = TRUE}
 # Get the mean values for each 5 minute time interval across all days.
 dtMeanForInterval <- aggregate(formula = steps ~ interval, data = activityData, FUN = mean)
 
@@ -89,7 +89,7 @@ activityData$steps <- ifelse(is.na(activityData$steps), dtMeanForInterval$steps[
 ```
 
 Now, we have a new dataset that is equal to the original dataset but with the missing data filled in i.e. with imputed values in the dataset. We make a histogram of the total number of steps taken each day with this dataset. 
-```{r}
+```{r, echo = TRUE}
 # Make a copy of this data for later use.
 dtComplete <- activityData
 
@@ -103,7 +103,7 @@ Next, we calculate the mean and median total number of steps taken per day simil
 > - When comparing the mean and median values with the earlier case, the impact of imputing missing data on the estimates of the total daily number of steps appears to be very small in this case. 
 > - However, it is interesting to notice that when the two histograms are compared, the number of days seem to have gone up for the interval of 10,000 to 15,000.
 
-```{r}
+```{r, echo = TRUE}
 # na.rm parameter is added below only as a good coding practice and is probably needed here as the dataset should not have any NA values in the first place.
 imputedMean <- mean(dtImputedCompleteData$steps, na.rm = FALSE)
 imputedMedian <- median(dtImputedCompleteData$steps, na.rm = FALSE)
@@ -114,7 +114,7 @@ cat("Imputed Mean : ", imputedMean, "\n", " Imputed Median : ", imputedMedian)
 For this final part of the assignment, we need to create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day. 
 In order to achieve this, we start by simply creating a list of all weekdays called 'WeekDaysList'. We will use this list to check against each day for each date in the dataset. 
 We add a new column 'weekDays' to the dataset. This column will be set to 'Weekday' if the date falls on one of the days from our 'WeekDaysList' list.
-```{r}
+```{r, echo = TRUE}
 WeekDaysList <- c('Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday')
 # This line sets 'weekDays' column value for each row to either 'Weekday' or 'Weekend' depending upon whether the date falls on 
 # a week day or a weekend.
@@ -126,7 +126,7 @@ dtComplete <- transform(dtComplete, Weekdays = factor(weekDays))
 ```
 
 Finally, using the 'Lattice' package, we make a time series plot of type = "l". The plot has the 5-minute interval as X-axis and the average number of steps taken, averaged across all weekday days or weekend days as y-axis.
-```{r}
+```{r, echo = TRUE}
 # Create a lattice time series plot using the transformed data.
 xyplot( steps ~ interval | Weekdays, data = dtComplete, type ="l", xlab ="Interval", ylab="Number of Steps", layout = c(1,2))
 ```
